Implemented exception handling in file input/output